caproto/v0.8.0/_sources/generated/caproto.server.records.Int64inFields.rst.txt
caproto.server.records.Int64inFields
====================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: Int64inFields

.. autoclass:: Int64inFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="int64in"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: Int64inFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_deadband
           - ``HYST``
           - Alarm Deadband
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - alarm_filter_time_constant
           - ``AFTC``
           - Alarm Filter Time Constant
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - alarm_filter_value
           - ``AFVL``
           - Alarm Filter Value
           - DOUBLE 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - archive_deadband
           - ``ADEL``
           - Archive Deadband
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
                 **Get**
                 **Put**
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - high_alarm_limit
           - ``HIGH``
           - High Alarm Limit
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - high_operating_range
           - ``HOPR``
           - High Operating Range
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - high_severity
           - ``HSV``
           - High Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
           - 
    
        *  - hihi_alarm_limit
           - ``HIHI``
           - Hihi Alarm Limit
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - hihi_severity
           - ``HHSV``
           - Hihi Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
           - 
    
        *  - input_specification
           - ``INP``
           - Input Specification
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - last_val_monitored
           - ``MLST``
           - Last Val Monitored
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - last_value_alarmed
           - ``LALM``
           - Last Value Alarmed
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - last_value_archived
           - ``ALST``
           - Last Value Archived
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - lolo_alarm_limit
           - ``LOLO``
           - Lolo Alarm Limit
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - lolo_severity
           - ``LLSV``
           - Lolo Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
           - 
    
        *  - low_alarm_limit
           - ``LOW``
           - Low Alarm Limit
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - low_operating_range
           - ``LOPR``
           - Low Operating Range
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
                 **Get**
                 **Put**
           - 
    
        *  - low_severity
           - ``LSV``
           - Low Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._LimitsLong`
           - 
    
        *  - monitor_deadband
           - ``MDEL``
           - Monitor Deadband
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
                 **Get**
                 **Put**
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - prev_simulation_mode
           - ``OLDSIMM``
           - Prev. Simulation Mode
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - sim_mode_async_delay
           - ``SDLY``
           - Sim. Mode Async Delay
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - sim_mode_scan
           - ``SSCN``
           - Sim. Mode Scan
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - simulation_input_link
           - ``SIOL``
           - Simulation Input Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - simulation_mode
           - ``SIMM``
           - Simulation Mode
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - simulation_mode_link
           - ``SIML``
           - Simulation Mode Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - simulation_mode_severity
           - ``SIMS``
           - Simulation Mode Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - simulation_value
           - ``SVAL``
           - Simulation Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - units_name
           - ``EGU``
           - Units name
           - CHAR 
           - 
                 Length(16)
                 Inherited from :class:`~caproto.server.records.base.Int64inFields`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~Int64inFields.group_read
       ~Int64inFields.group_write
       ~Int64inFields.publish
       ~Int64inFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~Int64inFields.default_values
       ~Int64inFields.has_val_field
       ~Int64inFields.scan_rate_sec
       ~Int64inFields.type_map
       ~Int64inFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: archive_deadband.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: high_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: high_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: hihi_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: lolo_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: low_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: low_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: monitor_deadband.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40